removed duplicate notes