@@ -265,28 +265,6 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <groupId>com.ibm</groupId>
-                    <artifactId>notes</artifactId>
-                    <version>1.0</version>
-                    <packaging>jar</packaging>
-                    <file>lib/Notes.jar</file>
-                    <generatePom>true</generatePom>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>install-jar-lib</id>
-                        <goals>
-                            <goal>install-file</goal>
-                        </goals>
-                        <phase>validate</phase>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <!-- This configuration must appear above the maven-clover2-plugin configuration to ensure the license is copied prior to clover instrumentation. -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -320,7 +298,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.plugin.version}</version>
                 <configuration>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=384m -enableassertions</argLine>
+                    <argLine>-Xmx1024m -enableassertions</argLine>
                 </configuration>
             </plugin>
             <plugin>
